[gd_scene load_steps=6 format=3 uid="uid://h4lhs12hvb3t"]

[ext_resource type="Script" path="res://Scripts/in_game_ui.gd" id="1_onokw"]
[ext_resource type="Texture2D" uid="uid://dtsspwscwogj" path="res://Assets/UI/Rectangle.png" id="2_oa50y"]
[ext_resource type="Texture2D" uid="uid://blitexo0onxhx" path="res://Assets/UI/Rectangle_pressed.png" id="3_6nvu0"]
[ext_resource type="Texture2D" uid="uid://bvybv4h83wfrf" path="res://Assets/UI/Rectangle_hover.png" id="4_gwbcq"]
[ext_resource type="FontFile" uid="uid://dnic8o2f6k5lt" path="res://Assets/Fonts/Kenney Blocks.ttf" id="5_xsvxb"]

[node name="InGameUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_onokw")

[node name="VBox" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 100.0
grow_horizontal = 2
size_flags_vertical = 0

[node name="Pause" type="TextureButton" parent="VBox"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
texture_normal = ExtResource("2_oa50y")
texture_pressed = ExtResource("3_6nvu0")
texture_hover = ExtResource("4_gwbcq")
stretch_mode = 0

[node name="Label" type="Label" parent="VBox/Pause"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.0
offset_top = -12.0
offset_right = 30.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.792157, 0.129412, 0.427451, 1)
theme_override_font_sizes/font_size = 32
text = "Pause"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Points" type="Label" parent="VBox"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_colors/font_color = Color(0.862745, 0.313726, 0.435294, 1)
theme_override_fonts/font = ExtResource("5_xsvxb")
theme_override_font_sizes/font_size = 56
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="mouse_entered" from="VBox/Pause" to="." method="_on_pause_mouse_entered"]
[connection signal="mouse_exited" from="VBox/Pause" to="." method="_on_pause_mouse_exited"]
